@@ -171,7 +171,6 @@
     <ClCompile Include="..\..\src\plugins\FourierGrid1D.cpp" />
     <ClCompile Include="..\..\src\plugins\GaussianModel.cpp" />
     <ClCompile Include="..\..\src\plugins\gridsearch.cpp" />
-    <ClCompile Include="..\..\src\plugins\HighPressureRateCoefficients.cpp" />
     <ClCompile Include="..\..\src\plugins\HinderedRotorCM1D.cpp" />
     <ClCompile Include="..\..\src\plugins\HinderedRotorQM1D.cpp" />
     <ClCompile Include="..\..\src\IrreversibleExchangeReaction.cpp" />
@@ -196,6 +195,7 @@
     <ClCompile Include="..\..\src\plugins\RRKM.cpp" />
     <ClCompile Include="..\..\src\plugins\SensitivityAnalysis.cpp" />
     <ClCompile Include="..\..\src\plugins\SimpleBimolecularSink.cpp" />
+    <ClCompile Include="..\..\src\plugins\ThermodynamicUtils.cpp" />
     <ClCompile Include="..\..\src\plugins\UnitTests.cpp" />
     <ClCompile Include="..\..\src\plugins\ZhuNakamuraCrossing.cpp" />
     <ClCompile Include="..\..\src\PseudoIsomerizationReaction.cpp" />
@@ -259,6 +259,7 @@
     <ClInclude Include="..\..\src\Persistence.h" />
     <ClInclude Include="..\..\src\plugins\HinderedRotorUtils.h" />
     <ClInclude Include="..\..\src\plugins\Potential1D.h" />
+    <ClInclude Include="..\..\src\plugins\ThermodynamicUtils.h" />
     <ClInclude Include="..\..\src\PseudoIsomerizationReaction.h" />
     <ClInclude Include="..\..\src\qd_test.h" />
     <ClInclude Include="..\..\src\Rdouble.h" />
